fixing footer size on mobile

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ ul {
 footer {
     margin:0 auto;
     width:100vw;
-    height:10vh;
+    height:15vh;
     position:fixed;
     bottom:0px;
 }
@@ -90,5 +90,5 @@ header {
 }
 
 #last-block {
-    margin-bottom:12vh;
+    margin-bottom:18vh;
 }
